prevent items column from wrapping

--- a/public/css/yasp.css
+++ b/public/css/yasp.css
@@ -375,3 +375,7 @@ table tfoot * {
     font-family: Arial, sans-serif;
 }
 */
+
+.nowrap {
+    white-space: nowrap;
+}
